Use mousepad as reference how to implement gtk app

--- a/xfce/xfce4-builder/Makefile.am
+++ b/xfce/xfce4-builder/Makefile.am
@@ -1,6 +1,6 @@
-SUBDIRS =								\
+SUBDIRS =							\
 	po								\
-	src
+	builder
 
 desktopdir = $(datadir)/applications
 desktop_in_files = xfce4-builder.desktop.in
