First running gtk program

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
 out
+
+*.sic
+*.o
+
+Makefile
+Makefile.in
+Makefile.in.in
+autom4te.cache/
+**/xfce4-builder/xfce4-builder.desktop
+**/xfce4-builder/aclocal.m4
+**/xfce4-builder/build.log
+**/xfce4-builder/compile
+**/xfce4-builder/config.guess
+**/xfce4-builder/config.h
+**/xfce4-builder/config.h.in
+**/xfce4-builder/config.log
+**/xfce4-builder/config.status
+**/xfce4-builder/config.sub
+**/xfce4-builder/configure
+**/xfce4-builder/configure.ac
+**/xfce4-builder/depcomp
+**/xfce4-builder/install-sh
+**/xfce4-builder/intltool-extract.in
+**/xfce4-builder/intltool-merge.in
+**/xfce4-builder/intltool-update.in
+**/xfce4-builder/libtool
+**/xfce4-builder/ltmain.sh
+**/xfce4-builder/missing
+**/xfce4-builder/mksintalldirs
+**/xfce4-builder/builder/.deps
+**/xfce4-builder/builder/xfce4-builder
+**/po/.intltool-merge-cache
+**/po/POTFILES
+**/po/stamp-it
+stamp-h1
+
